--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "26e1ecce9568ac87",
+        "id": "ab33a99d7cd34a91",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "readme.md",
+            "file": "people/fa/translators.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "readme.md",
+                "file": "people/fa/translators.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,17 +85,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "26e1ecce9568ac87",
+  "active": "ab33a99d7cd34a91",
   "lastOpenFiles": [
-    "readme.md",
-    "discussion/de/discussion-de.md",
-    "people/de/translators.md",
-    "people/maintainers.md",
+    "people/fa/translators.md",
+    "people/ja/translators.md",
+    "people/pt-BR/translators.md",
+    "people/ru/translators.md",
     "people/readme.md",
-    "Y_gears/scripts/Python/reamde-gears-scripts-python.md",
-    "Y_gears/templates/Templater/readme-gears-templates-templater.md",
-    "Y_gears/scripts/Templater/readme-gears-scripts-templater.md",
-    "open-source-2021.md",
-    "discussion/en/readme.md"
+    "discussion/en/helpful-scripts.md",
+    "term_base/de/term-base.de.md",
+    "discussion/en/translations.md",
+    "readme.md",
+    "discussion/de/discussion-de.md"
   ]
 }
