some flesh on the bones
started with some discussion based on the pull request https://github.com/obsidianmd/obsidian-translations/pull/567

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,7 @@
 {
   "readableLineLength": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "trashOption": "local",
+  "newFileLocation": "current",
+  "attachmentFolderPath": "./x_media"
 }
