--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,23 @@
     "type": "split",
     "children": [
       {
-        "id": "ab33a99d7cd34a91",
+        "id": "9484f466d6f71717",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "people/fa/translators.md",
+            "file": "discussion/de/core/add.md",
             "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "1d274b3dfa904391",
+        "type": "leaf",
+        "state": {
+          "type": "image",
+          "state": {
+            "file": "discussion/de/settings/x_media/Settings_Dialog_Überschriften_20211216.png"
           }
         }
       }
@@ -68,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "people/fa/translators.md",
+                "file": "discussion/de/core/add.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -83,19 +93,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "ab33a99d7cd34a91",
+  "active": "9484f466d6f71717",
   "lastOpenFiles": [
-    "people/fa/translators.md",
-    "people/ja/translators.md",
-    "people/pt-BR/translators.md",
-    "people/ru/translators.md",
-    "people/readme.md",
-    "discussion/en/helpful-scripts.md",
-    "term_base/de/term-base.de.md",
-    "discussion/en/translations.md",
-    "readme.md",
-    "discussion/de/discussion-de.md"
+    "discussion/de/core/add.md",
+    "discussion/de/core/community.md",
+    "discussion/de/core/embedd.md",
+    "discussion/de/core/plugins.md",
+    "discussion/de/settings/settings-dialog.md",
+    "discussion/de/settings/x_media/Settings_Dialog_Überschriften_20211216.png",
+    "discussion/de/core/hotkeys.md",
+    "discussion/de/_readme_discussion-de.md",
+    "discussion/de/core/global.md",
+    "discussion/de/core/link.md"
   ]
 }
