--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "a56836afb9916dfa",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "term_base/de/Term-base.de.md",
-            "mode": "preview"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -52,7 +49,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 207.5
+    "width": 310.5
   },
   "right": {
     "id": "123250bb43868b12",
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "term_base/de/Term-base.de.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -83,20 +79,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "active": "a56836afb9916dfa",
   "lastOpenFiles": [
-    "term_base/de/Term-base.de.md",
-    "term_base/ru/ru.termbase.md",
-    "term_base/pt-BR/pt-BR.termbase.md",
-    "term_base/ja/ja.termbase.md",
-    "term_base/fa/fa.guidelines.md",
-    "Y_gears/templates/Templater/translator.md",
-    "people/de/translators.md",
-    "people/ja/translators.md",
-    "people/pt-BR/translators.md",
-    "Y_gears/templates/Templater/readme-gears-templates-templater.md"
+    "_gears/_scripts/readme.md",
+    "readme.md",
+    "Y_gears/Readme.md",
+    "Y_gears/templates/readme.md",
+    "Y_gears/scripts/readme.md",
+    "Y_gears/scripts/Python/readme-gears-scripts-python.md",
+    "discussion/readme.md",
+    "Y_gears/scripts/Templater/readme-gears-scripts-templater.md",
+    "Y_gears/templates/Templater/readme.md",
+    "Y_gears/templates/Templater/maintainer.md"
   ]
 }
